remove fixed banner since it doesnt work on ios

--- a/public/css/website.css
+++ b/public/css/website.css
@@ -80,7 +80,7 @@ a.anchor{
 	padding-bottom: 35px;
 }
 .imagebackground {
-	background: url(/images/boats.jpg) no-repeat center center fixed; 
+	background: url(/images/boats.jpg) no-repeat center center; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
